removed google plus settings

--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ owner:
   twitter:  appelgriebsch
   facebook:
   google:
-    plus:   AndreasGerlach
-    analytics:  UA-49885060-3
+    plus:   #username
+    analytics:  #id
     verify:
     ad-client:
     ad-slot:
