--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name:   Andreas Gerlach
   avatar: bio-photo.png
-  bio:    "Hacking the open, responsive, offline and mobile-first Web..."
+  bio:    "All things #docker, #nodejs, #electronjs, #p2p, #semanticweb... doing Corporate Research @WincorNixdorf for a living, studying #WebScience @th_koeln"
   email:  info@appelgriebsch.com
   disqus-shortname:
   twitter:  appelgriebsch
