--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name:   Andreas Gerlach
   avatar: bio-photo.png
-  bio:    "All things #docker, #nodejs, #electronjs, #p2p, #semanticweb... doing Corporate Research @WincorNixdorf for a living, studying #WebScience @th_koeln"
+  bio:    "All things @docker, @nodejs, @electronjs, P2P & Semantic Web technologies, Corporate Research & Development at @DieboldNixdorf, M. Sc. Web Science."
   email:  info@appelgriebsch.com
   disqus-shortname:
   twitter:  appelgriebsch
